# kaggle-mcp

./: .gitignore  README.md  claude_desktop_config.json  main.py  pyproject.toml
kaggle_mcp/: __init__.py  server.py
kaggle_mcp/experiment/: __init__.py  manager.py
kaggle_mcp/guardrails/: __init__.py  cost.py  submission.py
kaggle_mcp/kaggle_api/: __init__.py  client.py  models.py
kaggle_mcp/ml_runtime/: __init__.py  features.py  models.py  trainer.py
